@startuml monte_carlo_simulation
!pragma useIntermediatePackages false
!define ABSTRACT &#123;abstract&#125;

class monte_carlo_simulation.AntitheticSampling {
}
abstract class monte_carlo_simulation.ImportanceSampling {
  _target_sampling_density: None
  ~_proposal_g_x(x, θ) \t\t ABSTRACT
  ~_sample_from_proposal_density_g(θ) \t\t ABSTRACT
}
class monte_carlo_simulation.MonteCarloSimulation {
  _h_x_fun: callable
  _n_vars: None
  _n_sample_paths: None
  _axis: None
  _n: None
  _target_sampling_desnity: TargetSamplingDensity
  _var_reduction: VarReduction
  +new_estimate()
}
class monte_carlo_simulation.NoVarReduction {
}
abstract class monte_carlo_simulation.TargetSamplingDensity {
  +pdf(x)  \t\t ABSTRACT
  +sample(n_vars, n_sample_paths) \t\t ABSTRACT
}
abstract class monte_carlo_simulation.VarReduction {
  _axis: None
  _n: None
  _h_x_fun: callable
  _n_vars: None
  _n_sample_paths: None
  +sample_H_x() \t\t ABSTRACT
}
monte_carlo_simulation.VarReduction <|-- monte_carlo_simulation.AntitheticSampling
monte_carlo_simulation.VarReduction <|-- monte_carlo_simulation.ImportanceSampling
monte_carlo_simulation.MonteCarloSimulation *-- monte_carlo_simulation.TargetSamplingDensity
monte_carlo_simulation.MonteCarloSimulation *-- monte_carlo_simulation.VarReduction
monte_carlo_simulation.VarReduction <|-- monte_carlo_simulation.NoVarReduction
footer Generated by //py2puml//
@enduml
